# wdldoc

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc.js  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  lint.yml  release.yml  semantic-release.yml  stale.yml
test/end-to-end/: greet.wdl  workflow.wdl
test/end-to-end/simple/: workflow.truth.md  workflow.wdl
test/end-to-end/truth/tasks/: greet.md
test/end-to-end/truth/workflows/: workflow.md
wdldoc/: __init__.py  __main__.py
wdldoc/miniwdl/: sources.py
wdldoc/templates/: markdown.py
