[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "wdldoc"
version = "1.7.1"
description = "Create WDL documentation using Markdown."
license = "MIT"
authors = [
    "Clay McLeod <Clay.McLeod@STJUDE.org>",
    "Andrew Frantz <Andrew.Frantz@STJUDE.org>"
]
readme = "README.md"
repository = "https://github.com/stjudecloud/wdldoc"
keywords = [
    "bioinformatics",
    "genomics",
    "workflows",
    "cromwell"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [
    { include = "wdldoc" }
]

[tool.poetry.scripts]
wdldoc = "wdldoc.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
miniwdl = "^1.2.2"
logzero = "^1.5.0"
cachecontrol = {extras = ["filecache"], version = "^0.12.6"}
requests = "^2.23.0"
python-semantic-release = "^7.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^23.9"
pylint = "^2.12.2"
mypy = "^0.910"
twine = "^3.7.1"
types-requests = "^2.26.2"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
version_source = "commit"
commit_subject = "chore: bumping version to v{version}"
commit_message = ""
commit_author = "St. Jude Cloud <support@stjude.cloud>"
build_command = "poetry build"
upload_to_release = "false"
# check_build_status = true
